# leogpt

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  leogpt.py
.github/workflows/: ci-cd.yaml  ci.yaml  publish.yaml
src/: auto_response.rs  bot.rs  chatbot.rs  config.rs  error.rs  fuzzy_search.rs  joke.rs  lib.rs  main.rs  media.rs  music.rs  openrouter.rs  react.rs  s3_index.rs  tools.rs  types.rs
src/auto_response/: handler.rs  matching.rs  mod.rs  rules.rs
src/chatbot/: context.rs  conversation.rs  handler.rs  response.rs  tool_loop.rs
src/music/: commands.rs  fuzzy_search.rs  playback.rs  s3_store.rs
src/react/: s3_store.rs
src/tools/: audio_gen.rs  definitions.rs  executor.rs  image_gen.rs  search.rs  server_info.rs  user_info.rs  utils.rs  web_search.rs
